Fixed register form alignment

--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -44,6 +44,11 @@
     margin-bottom: 0;
   }
 
+  .register_form {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   .title {
     margin-bottom: 15px;
   }
